--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-swipeable": "^7.0.2",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
